tests/ui/use/use-mod/use-mod-5.stderr
error[E0429]: `self` imports are only allowed within a { } list
  --> $DIR/use-mod-5.rs:7:13
   |
LL | use foo::bar::self;
   |             ^^^^^^
   |
help: consider importing the module directly
   |
LL - use foo::bar::self;
LL + use foo::bar;
   |
help: alternatively, use the multi-path `use` syntax to import `self`
   |
LL | use foo::bar::{self};
   |               +    +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0429`.
